# General-Simulator-Intermediary

./: NOTICE.txt  README.md
GeneralizedSimulatorIntermediary/: CMakeLists.txt
GeneralizedSimulatorIntermediary/GeneralizedSimulatorIntermediary/: CMakeLists.txt  GeneralizedSimulatorIntermediary.cpp  GeneralizedSimulatorIntermediary.h  WinSockHandler.h
GeneralizedSimulatorIntermediary/GeneralizedSimulatorIntermediary/DataHandling/: InputScanning.cpp  InputScanning.h
GeneralizedSimulatorIntermediary/GeneralizedSimulatorIntermediary/DataHandling/SharedResources/: SharedResource.cpp  SharedResource.h  ThreadsafeDataValue.cpp  ThreadsafeDataValue.h
GeneralizedSimulatorIntermediary/GeneralizedSimulatorIntermediary/NetworkHandling/: NetworkHandler.cpp  NetworkHandler.h
GeneralizedSimulatorIntermediary/GeneralizedSimulatorIntermediary/Threading/: Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h
